# libheic-rs

./: .gitignore  API.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: image_integration.rs  isobmff.rs  lib.rs  source.rs
tests/: exif_orientation_regression.rs  heic_grid_regression.rs  image_adapter_parity.rs  image_integration.rs  uncompressed_tiled_alignment.rs
tests/fixtures/: 7949_mirror_horizontal_rotate_270_cw.HEIC  heic_grid_primary_32.heic
