[package]
name = "libheic-rs"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-or-later"
description = "Pure Rust HEIF/HEIC/AVIF decoder (work in progress)"
readme = "README.md"

[dependencies]
heic-decoder = { path = "vendor/heic-decoder" }
libc = "0.2"
png = "0.18"
rav1d = { version = "1.1.0", default-features = false, features = ["bitdepth_8", "bitdepth_16"] }
scuffle-h265 = "0.2.2"

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }

[lib]
name = "libheic_rs"
path = "src/lib.rs"

[[bin]]
name = "heif-decode"
path = "src/bin/heif-decode.rs"
